--- a/Astro/Makefile.am
+++ b/Astro/Makefile.am
@@ -2,11 +2,11 @@ libdir	= ${exec_prefix}/lib
 
 lib_LTLIBRARIES = libAstro.la
 libAstro_la_SOURCES = \
-	moon.c \
-	orbits.c \
-	planets.c \
-	sky.c \
-	stars.c \
-	sun.c
+	moon.c moon.h \
+	orbits.c orbits.h \
+	planets.c planets.h \
+	sky.c sky.h \
+	stars.c stars.h \
+	sun.c sun.h
 
 INCLUDES += -I..
