--- a/Simulator/Makefile.in
+++ b/Simulator/Makefile.in
@@ -78,6 +78,7 @@ SUBDIRS = Aircraft \
 	Cockpit \
 	Controls \
 	Flight \
+	Include \
 	Joystick \
 	Math \
 	Scenery \
@@ -88,7 +89,7 @@ SUBDIRS = Aircraft \
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = ../Simulator/Include/config.h
 CONFIG_CLEAN_FILES = 
-DIST_COMMON =  README Makefile.am Makefile.in
+DIST_COMMON =  Makefile.am Makefile.in
 
 
 DISTFILES = $(DIST_COMMON) $(SOURCES) $(HEADERS) $(TEXINFOS) $(EXTRA_DIST)
