--- a/Slew/Makefile.am
+++ b/Slew/Makefile.am
@@ -1,7 +1,7 @@
 libdir	= ${exec_prefix}/lib
 
 lib_LTLIBRARIES = libSlew.la
-libSlew_la_SOURCES = \
-	slew.c
+
+libSlew_la_SOURCES = slew.c slew.h
 
 INCLUDES += -I../..
