--- a/Aircraft/Makefile.am
+++ b/Aircraft/Makefile.am
@@ -1,7 +1,6 @@
 libdir	= ${exec_prefix}/lib
 
 lib_LTLIBRARIES = libAircraft.la
-libAircraft_la_SOURCES = \
-	aircraft.c
+libAircraft_la_SOURCES = aircraft.c aircraft.h
 
 INCLUDES += -I..
