--- a/Cockpit/Makefile.am
+++ b/Cockpit/Makefile.am
@@ -2,7 +2,7 @@ libdir	= ${exec_prefix}/lib
 
 lib_LTLIBRARIES = libCockpit.la
 libCockpit_la_SOURCES = \
-	cockpit.c \
-	hud.c
+	cockpit.c cockpit.h \
+	hud.c hud.h
 
 INCLUDES += -I..
