--- a/Controls/Makefile.am
+++ b/Controls/Makefile.am
@@ -1,7 +1,7 @@
 libdir	= ${exec_prefix}/lib
 
 lib_LTLIBRARIES = libControls.la
-libControls_la_SOURCES = \
-	controls.c
+
+libControls_la_SOURCES = controls.c controls.h
 
 INCLUDES += -I..
