--- a/Controls/Makefile.in
+++ b/Controls/Makefile.in
@@ -73,8 +73,8 @@ VERSION = @VERSION@
 libdir	= ${exec_prefix}/lib
 
 lib_LTLIBRARIES = libControls.la
-libControls_la_SOURCES = \
-	controls.c
+
+libControls_la_SOURCES = controls.c controls.h
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = ../../Simulator/Include/config.h
 CONFIG_CLEAN_FILES = 
