--- a/Time/Makefile.am
+++ b/Time/Makefile.am
@@ -1,10 +1,11 @@
 libdir	= ${exec_prefix}/lib
 
 lib_LTLIBRARIES = libTime.la
+
 libTime_la_SOURCES = \
-	event.c \
-	fg_time.c \
-	fg_timer.c \
-	sunpos.c
+	event.c event.h \
+	fg_time.c fg_time.h \
+	fg_timer.c fg_timer.h \
+	sunpos.c sunpos.h
 
 INCLUDES += -I..
