--- a/Time/Makefile.in
+++ b/Time/Makefile.in
@@ -73,11 +73,12 @@ VERSION = @VERSION@
 libdir	= ${exec_prefix}/lib
 
 lib_LTLIBRARIES = libTime.la
+
 libTime_la_SOURCES = \
-	event.c \
-	fg_time.c \
-	fg_timer.c \
-	sunpos.c
+	event.c event.h \
+	fg_time.c fg_time.h \
+	fg_timer.c fg_timer.h \
+	sunpos.c sunpos.h
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = ../../Simulator/Include/config.h
 CONFIG_CLEAN_FILES = 
