--- a/Weather/Makefile.in
+++ b/Weather/Makefile.in
@@ -73,8 +73,8 @@ VERSION = @VERSION@
 libdir	= ${exec_prefix}/lib
 
 lib_LTLIBRARIES = libWeather.la
-libWeather_la_SOURCES = \
-	weather.c
+
+libWeather_la_SOURCES = weather.c weather.h
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = ../../Simulator/Include/config.h
 CONFIG_CLEAN_FILES = 
