--- a/config.h.in
+++ b/config.h.in
@@ -1,70 +1,160 @@
-/**************************************************************************
- * config.h.in -- These are some of the defines made by autoconf
- *
- * Contributed by Petter Reinholdtsen <pere@games.no>
- *
- * This program is free software; you can redistribute it and/or
- * modify it under the terms of the GNU General Public License as
- * published by the Free Software Foundation; either version 2 of the
- * License, or (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful, but
- * WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- * General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with this program; if not, write to the Free Software
- * Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
- *
- * $Id$
- * (Log is kept at end of this file)
- **************************************************************************/
+/* Simulator/Include/config.h.in.  Generated automatically from configure.in by autoheader.  */
 
+/* Define to empty if the keyword does not work.  */
+#undef const
 
-#undef PACKAGE
-#undef VERSION
-#undef HAVE_LIBM
-#undef HAVE_LIBX11 
-#undef HAVE_LIBXEXT 
-#undef HAVE_LIBXI 
-#undef HAVE_LIBXMU 
-#undef HAVE_LIBMESAGL
-#undef HAVE_LIBMESAGL 
-#undef HAVE_LIBMESAGLU 
-#undef HAVE_LIBGLUT 
+/* Define if you don't have vprintf but do have _doprnt.  */
+#undef HAVE_DOPRNT
 
-#undef HAVE_FCNTL_H
-#undef HAVE_GETOPT_H
-#undef HAVE_MALLOC_H
-#undef HAVE_STDLIB_H
-#undef HAVE_SYS_TIME_H
-#undef HAVE_SYS_TIMEB_H
-#undef HAVE_UNISTD_H
-#undef HAVE_WINDOWS_H
-#undef HAVE_WINBASE_H
-#undef STDC_HEADERS
-
-#undef TIME_WITH_SYS_TIME
-#undef RETSIGTYPE
-#undef HAVE_FTIME
-#undef HAVE_GETITIMER 
-#undef HAVE_GETLOCALTIME
-#undef HAVE_GETTIMEOFDAY
-#undef HAVE_MKTIME
-#undef HAVE_RAND 
-#undef HAVE_RANDOM 
-#undef HAVE_SETITIMER 
-#undef HAVE_SIGNAL
-#undef HAVE_STRSTR
-#undef HAVE_VALUES
+/* Define if you have the vprintf function.  */
 #undef HAVE_VPRINTF
 
+/* Define as the return type of signal handlers (int or void).  */
+#undef RETSIGTYPE
+
+/* Define to `unsigned' if <sys/types.h> doesn't define.  */
+#undef size_t
+
+/* Define if you have the ANSI C header files.  */
+#undef STDC_HEADERS
+
+/* Define if you can safely include both <sys/time.h> and <time.h>.  */
+#undef TIME_WITH_SYS_TIME
+
+/* Define if your <sys/time.h> declares struct tm.  */
+#undef TM_IN_SYS_TIME
+
+/* Define if the X Window System is missing or not being used.  */
+#undef X_DISPLAY_MISSING
+
+/* Define to empty if the keyword does not work.  */
+#undef const
+
+/* Define if you don't have vprintf but do have _doprnt.  */
+#undef HAVE_DOPRNT
+
+/* Define if you have the vprintf function.  */
+#undef HAVE_VPRINTF
+
+/* Define to package name */
+#undef PACKAGE
+
+/* Define as the return type of signal handlers (int or void).  */
+#undef RETSIGTYPE
+
+/* Define to `unsigned' if <sys/types.h> doesn't define.  */
+#undef size_t
+
+/* Define if you have the ANSI C header files.  */
+#undef STDC_HEADERS
+
+/* Define if you can safely include both <sys/time.h> and <time.h>.  */
+#undef TIME_WITH_SYS_TIME
+
+/* Define if your <sys/time.h> declares struct tm.  */
+#undef TM_IN_SYS_TIME
+
+/* Define to version number */
+#undef VERSION
+
+/* Define if compiling on a Winbloze (95, NT, etc.) platform */
 #undef WIN32
 
+/* Define if the X Window System is missing or not being used.  */
+#undef X_DISPLAY_MISSING
 
-/* $Log$
-/* Revision 1.1  1998/04/03 22:05:28  curt
-/* Converting to Gnu autoconf system.
-/*
- */
+/* Define if you have the GetLocalTime function.  */
+#undef HAVE_GETLOCALTIME
+
+/* Define if you have the ftime function.  */
+#undef HAVE_FTIME
+
+/* Define if you have the getitimer function.  */
+#undef HAVE_GETITIMER
+
+/* Define if you have the gettimeofday function.  */
+#undef HAVE_GETTIMEOFDAY
+
+/* Define if you have the mktime function.  */
+#undef HAVE_MKTIME
+
+/* Define if you have the rand function.  */
+#undef HAVE_RAND
+
+/* Define if you have the random function.  */
+#undef HAVE_RANDOM
+
+/* Define if you have the setitimer function.  */
+#undef HAVE_SETITIMER
+
+/* Define if you have the signal function.  */
+#undef HAVE_SIGNAL
+
+/* Define if you have the strstr function.  */
+#undef HAVE_STRSTR
+
+/* Define if you have the <fcntl.h> header file.  */
+#undef HAVE_FCNTL_H
+
+/* Define if you have the <getopt.h> header file.  */
+#undef HAVE_GETOPT_H
+
+/* Define if you have the <malloc.h> header file.  */
+#undef HAVE_MALLOC_H
+
+/* Define if you have the <stdlib.h> header file.  */
+#undef HAVE_STDLIB_H
+
+/* Define if you have the <sys/time.h> header file.  */
+#undef HAVE_SYS_TIME_H
+
+/* Define if you have the <sys/timeb.h> header file.  */
+#undef HAVE_SYS_TIMEB_H
+
+/* Define if you have the <unistd.h> header file.  */
+#undef HAVE_UNISTD_H
+
+/* Define if you have the <values.h> header file.  */
+#undef HAVE_VALUES_H
+
+/* Define if you have the <winbase.h> header file.  */
+#undef HAVE_WINBASE_H
+
+/* Define if you have the <windows.h> header file.  */
+#undef HAVE_WINDOWS_H
+
+/* Define if you have the GL library (-lGL).  */
+#undef HAVE_LIBGL
+
+/* Define if you have the GLU library (-lGLU).  */
+#undef HAVE_LIBGLU
+
+/* Define if you have the GLcore library (-lGLcore).  */
+#undef HAVE_LIBGLCORE
+
+/* Define if you have the MesaGL library (-lMesaGL).  */
+#undef HAVE_LIBMESAGL
+
+/* Define if you have the MesaGLU library (-lMesaGLU).  */
+#undef HAVE_LIBMESAGLU
+
+/* Define if you have the X11 library (-lX11).  */
+#undef HAVE_LIBX11
+
+/* Define if you have the Xext library (-lXext).  */
+#undef HAVE_LIBXEXT
+
+/* Define if you have the Xi library (-lXi).  */
+#undef HAVE_LIBXI
+
+/* Define if you have the Xmu library (-lXmu).  */
+#undef HAVE_LIBXMU
+
+/* Define if you have the glut library (-lglut).  */
+#undef HAVE_LIBGLUT
+
+/* Define if you have the m library (-lm).  */
+#undef HAVE_LIBM
+
+/* Define if you have the socket library (-lsocket).  */
+#undef HAVE_LIBSOCKET
