Tweaks to Gnu automake/autoconf system.

--- a/Math/Makefile.in
+++ b/Math/Makefile.in
@@ -78,10 +78,11 @@ libMath_la_SOURCES = \
 	MAT3inv.c \
 	MAT3mat.c \
 	MAT3vec.c \
-	fg_geodesy.c \
-	fg_random.c \
-	polar.c \
-	vector.c
+	fg_geodesy.c fg_geodesy.h \
+	fg_random.c fg_random.h \
+	mat3.h mat3defs.h mat3err.h \
+	polar.c polar.h \
+	vector.c vector.h
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = ../../Simulator/Include/config.h
 CONFIG_CLEAN_FILES = 
