--- a/XGL/Makefile.am
+++ b/XGL/Makefile.am
@@ -1,8 +1,7 @@
 libdir	= ${exec_prefix}/lib
 
 lib_LTLIBRARIES = libXGL.la
-libXGL_la_SOURCES = \
-	xgl.c \
-	xglUtils.c
+
+libXGL_la_SOURCES = xgl.c xgl.h xglUtils.c
 
 INCLUDES += -I..
