--- a/XGL/Makefile.in
+++ b/XGL/Makefile.in
@@ -73,9 +73,8 @@ VERSION = @VERSION@
 libdir	= ${exec_prefix}/lib
 
 lib_LTLIBRARIES = libXGL.la
-libXGL_la_SOURCES = \
-	xgl.c \
-	xglUtils.c
+
+libXGL_la_SOURCES = xgl.c xgl.h xglUtils.c
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = ../../Simulator/Include/config.h
 CONFIG_CLEAN_FILES = 
