--- a/Math/Makefile.am
+++ b/Math/Makefile.am
@@ -6,9 +6,10 @@ libMath_la_SOURCES = \
 	MAT3inv.c \
 	MAT3mat.c \
 	MAT3vec.c \
-	fg_geodesy.c \
-	fg_random.c \
-	polar.c \
-	vector.c
+	fg_geodesy.c fg_geodesy.h \
+	fg_random.c fg_random.h \
+	mat3.h mat3defs.h mat3err.h \
+	polar.c polar.h \
+	vector.c vector.h
 
 INCLUDES += -I..
