--- a/Makefile.am
+++ b/Makefile.am
@@ -1,2 +1,6 @@
+SUBDIRS = Simulator Tools
 
-SUBDIRS = Simulator
+EXTRA_DIST = Makefile.extra README.Win32 README.autoconf README.running Thanks
+
+dist-hook:
+	tar cf - Hints | (cd $(distdir); tar xvf -)
