Incorporated autopilot heading hold contributed by:  Jeff Goeke-Smith <jgoeke@voyager.net>

--- a/Main/Makefile.am
+++ b/Main/Makefile.am
@@ -16,16 +16,21 @@ fg_SOURCES = \
 fg_LDADD = \
 	$(top_builddir)/Simulator/Aircraft/libAircraft.la \
 	$(top_builddir)/Simulator/Astro/libAstro.la \
+	$(top_builddir)/Simulator/Autopilot/libAutopilot.la \
 	$(top_builddir)/Simulator/Cockpit/libCockpit.la \
 	$(top_builddir)/Simulator/Controls/libControls.la \
 	$(top_builddir)/Simulator/Flight/libFlight.la \
 	$(top_builddir)/Simulator/Flight/LaRCsim/libLaRCsim.la \
 	$(top_builddir)/Simulator/Flight/Slew/libSlew.la \
 	$(top_builddir)/Simulator/Scenery/libScenery.la \
-	$(top_builddir)/Simulator/Scenery/Bucket/libBucket.la \
 	$(top_builddir)/Simulator/Time/libTime.la \
 	$(top_builddir)/Simulator/Weather/libWeather.la \
         $(top_builddir)/Simulator/Joystick/libJoystick.la \
-	$(top_builddir)/Simulator/Math/libMath.la
+	$(top_builddir)/Simulator/Math/libMath.la \
+	$(top_builddir)/Lib/Bucket/libBucket.la
 
-INCLUDES += -I.. -DGLUT
+INCLUDES += \
+	-DGLUT \
+	-I$(top_builddir) \
+	-I$(top_builddir)/Lib \
+	-I$(top_builddir)/Simulator
