Code reorganizations.  Added a Lib/ directory for more general libraries.

--- a/Aircraft/Makefile.am
+++ b/Aircraft/Makefile.am
@@ -3,4 +3,4 @@ libdir	= ${exec_prefix}/lib
 lib_LTLIBRARIES = libAircraft.la
 libAircraft_la_SOURCES = aircraft.c aircraft.h
 
-INCLUDES += -I..
+INCLUDES += -I$(top_builddir) -I$(top_builddir)/Simulator
