--- a/Astro/Makefile.am
+++ b/Astro/Makefile.am
@@ -9,4 +9,4 @@ libAstro_la_SOURCES = \
 	stars.c stars.h \
 	sun.c sun.h
 
-INCLUDES += -I..
+INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib -I$(top_builddir)/Simulator
