--- a/Controls/Makefile.am
+++ b/Controls/Makefile.am
@@ -4,4 +4,4 @@ lib_LTLIBRARIES = libControls.la
 
 libControls_la_SOURCES = controls.c controls.h
 
-INCLUDES += -I..
+INCLUDES += -I$(top_builddir) -I$(top_builddir)/Simulator
