--- a/Tools/Makefile.in
+++ b/Tools/Makefile.in
@@ -75,7 +75,6 @@ EXTRA_DIST = process-dem.pl
 
 SUBDIRS = \
 	AssemTris \
-	DEM \
 	Dem2node \
 	FixNode \
 	FixObj \
@@ -86,7 +85,7 @@ SUBDIRS = \
 
 bin_SCRIPTS = process-dem.pl
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
-CONFIG_HEADER = ../Simulator/Include/config.h
+CONFIG_HEADER = ../Include/config.h
 CONFIG_CLEAN_FILES = 
 SCRIPTS =  $(bin_SCRIPTS)
 
