--- a/FixObj/Makefile.in
+++ b/FixObj/Makefile.in
@@ -102,12 +102,12 @@ fixobj_SOURCES = main.c mat3.h obj.c obj.h MAT3vec.c
 
 fixobj_LDADD =
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
-CONFIG_HEADER = ../../Simulator/Include/config.h
+CONFIG_HEADER = ../../Include/config.h
 CONFIG_CLEAN_FILES = 
 PROGRAMS =  $(bin_PROGRAMS)
 
 
-DEFS = @DEFS@ -I. -I$(srcdir) -I../../Simulator/Include
+DEFS = @DEFS@ -I. -I$(srcdir) -I../../Include
 CPPFLAGS = @CPPFLAGS@
 LDFLAGS = @LDFLAGS@
 LIBS = @LIBS@
@@ -339,11 +339,14 @@ clean-generic maintainer-clean-generic clean mostlyclean distclean \
 maintainer-clean
 
 
-INCLUDES += -I../../Simulator
+INCLUDES += -I$(top_builddir)
 
 #---------------------------------------------------------------------------
 # $Log$
-# Revision 1.1  1998/04/08 23:19:36  curt
+# Revision 1.2  1998/04/14 02:26:05  curt
+# Code reorganizations.  Added a Lib/ directory for more general libraries.
+#
+# Revision 1.1  1998/04/08 23:19:35  curt
 # Adopted Gnu automake/autoconf system.
 #
 # Revision 1.2  1998/01/21 02:55:53  curt
