Code reorganizations.  Added a Lib/ directory for more general libraries.

--- a/Bucket/Makefile.am
+++ b/Bucket/Makefile.am
@@ -4,4 +4,4 @@ lib_LTLIBRARIES = libBucket.la
 
 libBucket_la_SOURCES = bucketutils.c bucketutils.h
 
-INCLUDES += -I../..
+INCLUDES += -I$(top_builddir)
